Push notification code in AppDelgate

--- a/photoshare/photoshare/ZoomPhotoViewController.xib
+++ b/photoshare/photoshare/ZoomPhotoViewController.xib
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ZoomPhotoViewController">
             <connections>
                 <outlet property="imgView" destination="bWH-SZ-5DC" id="YM5-IZ-ysK"/>
+                <outlet property="scrollViewForImage" destination="5UB-bd-zQ5" id="XBT-0c-We7"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -16,11 +17,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" maximumZoomScale="4" bouncesZoom="NO" id="5UB-bd-zQ5">
-                    <rect key="frame" x="0.0" y="-1" width="320" height="480"/>
+                    <rect key="frame" x="0.0" y="-1" width="320" height="441"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="bWH-SZ-5DC">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                            <rect key="frame" x="0.0" y="39" width="320" height="396"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
                     </subviews>
