--- a/photoshare/photoshare/PhotoShareController.xib
+++ b/photoshare/photoshare/PhotoShareController.xib
@@ -20,6 +20,7 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Zt0-jW-0MP">
                     <rect key="frame" x="0.0" y="108" width="320" height="322"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </imageView>
                 <view contentMode="scaleToFill" id="xXb-SM-eMU">
                     <rect key="frame" x="0.0" y="428" width="320" height="89"/>
